--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
    <link rel="preconnect" href="https://fonts.gstatic.com">
    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+   <link type="text/css" rel="stylesheet" href="css/portfolio.css">
    
-   
-      <title>PAGE TITLE</title>
+      <title>Portfolio Home Page</title>
 </head>
 <body>
 
@@ -118,7 +118,11 @@
    </header>
 
    <nav>
-       Placeholder
+       <ul>
+         <li><a href="index.html">Home</a></li>
+         <li><a href="about.html">About Me</a></li>
+         <li><a href="contact.html">Contact Me</a></li>
+       </ul>
    </nav>
    <div class="container">
     <!-- Put assignment specific code here -->
