--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
      <div class="row">
        
         <div class="media">
-          <img src="images/emailme.png" alt="#">
+          <img src="images/contactmesticker.png" alt="#">
         </div><!-- End of Media -->
         
         <div class="contact">
