--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
           </p>
         </a>
         </div><!-- End Section item -->
+        
+        <div class="section-item">
+          <a href="cardealer/index.html" target="_blank">
+          <div class="section-icon">
+          <i class="fas fa-car"></i>
+          </div>
+          <h4>Car Dealer Website</h4>
+          <p>
+              The Car Dealership Site.
+          </p>
+        </a>
+        </div><!-- End Section item -->
        
     </div><!-- End of section container -->
 
