Updated index page

--- a/cardealer/index.html
+++ b/cardealer/index.html
@@ -29,8 +29,8 @@
    <div class="cover-photo">
      <div class="overlay">
        <div class="overlay-inner">
-         <h1>Car Dealership Name</h1>
-         <p>Create a tag line</p>
+         <h1>Advanced Motors</h1>
+         <p>We strive to enhance your drive!</p>
          <a class="cta-button" href="cars.html">View our Cars >></a>
        </div>
        
@@ -49,7 +49,7 @@
      <div class="text">
        <h2>Hot Deals Waiting for you!</h2>
        <p>
-         Create a cool paragraph
+         Check out our latest deals you can't find anywhere else! Find a sutibale car at the price of your liking.
        </p>
         <a class="cta-button" href="deals.html">View our Hot Deals >></a>
      </div>
@@ -61,7 +61,7 @@
      <div class="text">
        <h2>We have the best team in town!</h2>
        <p>
-         Create a cool paragraph
+         Our workers include many different indivduals who are all eager to effectively provide you with the quality service you deserve. We want to insure that you have an exceptional experience at our dealership.
        </p>
         <a class="cta-button" href="team.html">Meet our Team >></a>
      </div>
@@ -80,7 +80,7 @@
      <div class="text">
        <h2>Three locations to serve you!</h2>
        <p>
-         Create a cool paragraph
+         The variety of our locations are to guarentee that you can find us in an area near you.  We are ready for your visit!
        </p>
         <a class="cta-button" href="contact.html">Find a Location >></a>
      </div>
