--- a/cardealer/index.html
+++ b/cardealer/index.html
@@ -49,7 +49,7 @@
      <div class="text">
        <h2>Hot Deals Waiting for you!</h2>
        <p>
-         Check out our latest deals you can't find anywhere else! Find a sutibale car at the price of your liking.
+         Check out our latest deals you can't find anywhere else! Find a suitable car at the price of your liking.
        </p>
         <a class="cta-button" href="deals.html">View our Hot Deals >></a>
      </div>
@@ -80,7 +80,7 @@
      <div class="text">
        <h2>Three locations to serve you!</h2>
        <p>
-         The variety of our locations are to guarentee that you can find us in an area near you.  We are ready for your visit!
+         The variety of our locations are to guarentee that you can find us at an area near you.  We are ready for your visit!
        </p>
         <a class="cta-button" href="contact.html">Find a Location >></a>
      </div>
