--- a/cardealer/contact.html
+++ b/cardealer/contact.html
@@ -23,7 +23,7 @@
          <li><a href="cars.html">Vehicles</a></li>
          <li><a href="deals.html">Hot Deals</a></li>
          <li><a href="team.html">Our Staff</a></li>
-         <li><a href="Contact.html">Contact Us</a></li>
+         <li><a href="contact.html">Contact Us</a></li>
        </ul>
    </nav>
   
