Uploaded our contact page

--- a/cardealer/contact.html
+++ b/cardealer/contact.html
@@ -36,10 +36,10 @@
      <div class="text">
        <h2>Motor House</h2>
        <p>
-         Address: 1111 Grifin Road, Sterling Heights MI 56556
-         Phone: (111)-111-2222
-         Email: motorhouse@hmail.com
-         Hours: Mon-Sat from 9AM-5PM
+         Address: 1111 Grifin Road, Sterling Heights MI 56556<br>
+         Phone: (111)-111-2222<br>
+         Email: motorhouse@hmail.com<br>
+         Hours: Mon-Sat from 9AM-5PM<br>
        </p>
         <a class="cta-button" href="tel: +11112222">Call Us Now >></a>
      </div>
@@ -54,10 +54,10 @@
      <div class="text">
        <h2>Jim Auto Dealing</h2>
        <p>
-         Address: 3333 Jim St, Hamtramck MI 48212
-         Phone: (000)-222-3333
-         Email: jimautodealing@hmail.com
-         Hours: Mon-Wed 9AM-3PM, Thur-Sat 7AM-4PM
+         Address: 3333 Jim St, Hamtramck MI 48212<br>
+         Phone: (000)-222-3333<br>
+         Email: jimautodealing@hmail.com<br>
+         Hours: Mon-Wed 9AM-3PM, Thur-Sat 7AM-4PM<br>
        </p>
         <a class="cta-button" href="tel: +11112222">Call Us Now >></a>
      </div>
@@ -72,10 +72,10 @@
      <div class="text">
        <h2>Advanced Motors of Warren</h2>
        <p>
-         Address: 0909 Conch St, Warren MI 48091
-         Phone: (222)-999-1111
-         Email: advancedmotorsofwarren@hmail.com
-         Hours: Monday-Friday 8:30AM-2PM
+         Address: 0909 Conch St, Warren MI 48091<br>
+         Phone: (222)-999-1111<br>
+         Email: advancedmotorsofwarren@hmail.com<br>
+         Hours: Monday-Friday 8:30AM-2PM<br>
        </p>
         <a class="cta-button" href="tel: +11112222">Call Us Now >></a>
      </div>
