--- a/cardealer/index.html
+++ b/cardealer/index.html
@@ -3,11 +3,13 @@
 
 <head>
    <style>
-       
+
   
    </style>
    
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Mukta&display=swap" rel="stylesheet">
    <link type="text/css" rel="stylesheet" href="css/cardealer.css">
       <title>Car Dealer Home</title>
 </head>
