--- a/cardealer/contact.html
+++ b/cardealer/contact.html
@@ -8,6 +8,7 @@
    </style>
    
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Mukta&display=swap" rel="stylesheet">
    <link type="text/css" rel="stylesheet" href="css/cardealer.css">
       <title>Car Dealer Contact</title>
 </head>
