--- a/cardealer/team.html
+++ b/cardealer/team.html
@@ -3,11 +3,12 @@
 
 <head>
    <style>
-       
-  
+              
+
    </style>
    
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Mukta&display=swap" rel="stylesheet">
    <link type="text/css" rel="stylesheet" href="css/cardealer.css">
       <title>Car Dealer Team Page</title>
 </head>
