--- a/foodwebsite/index.html
+++ b/foodwebsite/index.html
@@ -6,13 +6,11 @@
  
 
 
-
-
 	</style>
 	<!-- Put the Link Tags Here -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css2?family=Anton&family=Mukta&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Mukta&display=swap" rel="stylesheet">
  <link type="text/css" rel="stylesheet" href="css/foodwebsite.css">
 	<title>The Dessert Diner</title>
 
@@ -91,7 +89,7 @@
 		
 		<div class="row">
 		  <div class="media">
-		    <img src="images/contactus.png" alt="#">
+		    <img src="images/location.png" alt="#">
 	
 		  </div>
 	 <div class="text">
